objects/Snapshot_Child__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Staff__c</fullName>
        <label>Assigned Staff</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendance_Percent__c</fullName>
        <label>Attendance Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Attendance__c</fullName>
        <label>Average Attendance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_GPA__c</fullName>
        <label>Average GPA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Member_Of_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Member Of Cohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Excused_Absence__c</fullName>
        <label>Excused Absence</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Excused_Tardies__c</fullName>
        <label>Excused Tardies</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Unexcused_Absence__c</fullName>
        <label>Unexcused Absence</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Unexcused_Tardies__c</fullName>
        <label>Unexcused Tardies</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Snapshot Children</relationshipLabel>
        <relationshipName>Snapshot_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Summary__c</fullName>
        <label>Snapshot Summary</label>
        <referenceTo>Snapshot_Summary__c</referenceTo>
        <relationshipLabel>Snapshot Children</relationshipLabel>
        <relationshipName>Snapshot_Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Snapshot Children</relationshipLabel>
        <relationshipName>Snapshot_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Exit_Reason__c</fullName>
        <label>Student Exit Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Exit_Type__c</fullName>
        <label>Student Exit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_OSSE_Exit_Code__c</fullName>
        <label>Student OSSE Exit Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdraw_Date__c</fullName>
        <description>Record of when the student was withdrawn</description>
        <label>Withdraw Date</label>
        <type>Date</type>
    </fields>
    <label>Snapshot Child</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Snapshot Child ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Children</pluralLabel>
    <recordTypes>
        <fullName>Cohort</fullName>
        <active>true</active>
        <label>Cohort</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section</fullName>
        <active>true</active>
        <label>Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>